--- a/student.html
+++ b/student.html
@@ -16,6 +16,8 @@
     <header>
       <nav>
             <h1> Student Immigrants</h1>
+          </nav>
             </header>
+    
  </body>
 </html>
