--- a/aboutus.html
+++ b/aboutus.html
@@ -6,7 +6,7 @@
 
   <head>
       <!-- This is the header for the tab for any browser for my website -->
-      <title> Immigration </title>
+      <title> Immigration: About Us </title>
       <link href="main.css" rel="stylesheet" type="text/css" />
 
   </head>
@@ -67,6 +67,8 @@
         
         </nav>
       </header>
-      
+      <div class="footer">
+        <p> AAS 360 Final Project - Immigration - Dec 2017</p>
+      </div>
  </body>
 </html>
