--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </header>
       
       <div class="footer">
-        <p> AAS 360 Final Project - Immigration - Dec 2017</p>
+        <p2> AAS 360 Final Project - Immigration - Dec 2017</p2>
       </div>
  </body>
 </html>
