--- a/orphan.html
+++ b/orphan.html
@@ -52,7 +52,7 @@
      </div>
     </div>
       <div class="footer">
-        <p> AAS 360 Final Project - Immigration - Dec 2017</p>
+        <p2> AAS 360 Final Project - Immigration - Dec 2017</p2>
       </div>
       
  </body>
