--- a/militarybrides.html
+++ b/militarybrides.html
@@ -47,7 +47,7 @@
      </div>
     </div>
       <div class="footer">
-        <p> AAS 360 Final Project - Immigration - Dec 2017</p>
+        <p2> AAS 360 Final Project - Immigration - Dec 2017</p2>
       </div>
       
  </body>
