--- a/student.html
+++ b/student.html
@@ -7,7 +7,7 @@
   <head>
       <!-- This is the header for the tab for any browser for my website -->
       <title> Immigration: Student Immigrants </title>
-      <link href="main4.css" rel="stylesheet" type="text/css" />
+      <link href="main3.css" rel="stylesheet" type="text/css" />
 
   </head>
 
@@ -46,7 +46,7 @@
      </div>
     </div>
       <div class="footer">
-        <p> AAS 360 Final Project - Immigration - Dec 2017</p>
+        <p2> AAS 360 Final Project - Immigration - Dec 2017</p2>
       </div>
       
  </body>
