--- a/workcited.html
+++ b/workcited.html
@@ -7,8 +7,8 @@
   <head>
       <!-- This is the header for the tab for any browser for my website -->
       <title> Immigration: Works Cited </title>
-      <link href="main3.css" rel="stylesheet" type="text/css" />
-
+      <link href="main5.css" rel="stylesheet" type="text/css" />
+      
   </head>
 
   <body>
@@ -19,22 +19,24 @@
           </nav>
             </header>
        <div class = "lineUp">
-      <p> 
-     Military Brides:    
-          Sonia Shinn Sunoo, Korean Picture Brides: 1903-1920, a Collection of Oral Histories(Philadelphia: Xlibris, 2002)//////////////////
+      <ul class = "a"> 
+   <li>  Military Brides:    
+          Sonia Shinn Sunoo, Korean Picture Brides: 1903-1920, a Collection of Oral Histories(Philadelphia: Xlibris, 2002)
           Ji-Yeon Yuh, Beyond the Shadow of Camptown: Korean Military Brides in America(New York: New York University Press, 2002), pg 2. 
-          ************************************
+          </li>
+    <li>
      Orphans:
           Cho, Young-ee, "The Diaspora of Korean Children: A Cross-Cultural Study of the Educational Crisis in Contemporary South Korea" (2007). Theses, Dissertations, Professional Papers. Paper 1244.
+          </li>
+    <li>      
      Students: 
           T.Kauh, “Changing Status and Roles of Older Korean Immigrants in the United States.” International Journal of Aging and Human Development 49 (1999): 213-229; Mui and Shibusawa Asian American Elders in the Twenty-First Century; A.D. Ong and C.S Bergeman, “Resilience and Adaptation 
-          to Stress in Later Life: Empirical Perspectives and Conceptual Implications,” Aging International 29 (2004): 219-246; S.T.Wong, G.J.Yoo, and A.L Stewart, “Examining the Types of Social Support and the Actual Sources of Support in Older in Older Chinese and Korean Immigrants, “International Journal of Aging and Human Development 61 (2005): 105-121. //////////////////
+          to Stress in Later Life: Empirical Perspectives and Conceptual Implications,” Aging International 29 (2004): 219-246; S.T.Wong, G.J.Yoo, and A.L Stewart, “Examining the Types of Social Support and the Actual Sources of Support in Older in Older Chinese and Korean Immigrants, “International Journal of Aging and Human Development 61 (2005): 105-121. 
 	       Eleana Kim, “The Origins of Korean Adoption: Cold War Geopolitics and Intimate Diplomacy” (working paper, U.S.-Korea Institute’s Working Paper Series, 2009), pg 5
-          ************************************
-
-
+          </li>
+           </ul>
       </div>
-          </p>
+         
   <div id = "menu-outer">
         <div class = "elements">
             <div class = "btn">
