--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <nav>
             
-                <h1> Second-Wave Immigration </h1>
+                <h1> Immigration </h1>
  
  <img src="koreankid.jpg" style="width:500px;height:300px" >
 
