--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <nav>
             
                 <h1> Immigration </h1>
+                <h2> A focus on the Second Wave</h2>
  
  <img src="koreankid.jpg" style="width:500px;height:300px" >
 
